[gd_scene load_steps=2 format=3 uid="uid://cg4s3kqg5rq88"]

[ext_resource type="Script" path="res://Netorking/lobby.gd" id="1_u7on4"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u7on4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -109.5
offset_right = 90.0
offset_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Set Network IP/URL"

[node name="ip" type="LineEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "ex: 127.0.0.1, localhost"

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Default Host: ws://localhost:1072"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="btn_host" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="btn_join" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/btn_host" to="." method="_on_btn_host_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/btn_join" to="." method="_on_btn_join_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
